--- a/MvcModalPOC/MvcModalPOC.csproj
+++ b/MvcModalPOC/MvcModalPOC.csproj
@@ -197,6 +197,7 @@
     <Content Include="Views\Shared\Error.cshtml" />
     <Content Include="Views\Shared\_Layout.cshtml" />
     <Content Include="Views\Home\JavaScriptWay.cshtml" />
+    <Content Include="Views\Home\MvcWay.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
